# weekly-cash-balances

./: README.md  pyproject.toml
src/weekly_cash_balances/: main.py
src/weekly_cash_balances/data/: assets.py  ex_rates.py  main.py  utils.py
src/weekly_cash_balances/data/sample/: asset_types.json  assets.json  currencies.json  currency_pairs.json  scenarios.json
src/weekly_cash_balances/db/: db.py
weekly_cash_balances_dbt/: dbt_project.yml
weekly_cash_balances_dbt/models/: asset_data.sql  asset_values.sql  asset_values_data.sql  converted_cash_balances.sql  grouped_cash_balances.sql  schema.yml
