[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weekly_cash_balances"
version = "0.1.0"
description = "Weekly Cash Balances"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-duckdb>=1.10.0",
    "dotenv>=0.9.9",
    "duckdb>=1.4.3",
    "numpy>=2.4.0",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
weekly-cash-balances = "weekly_cash_balances.main:main"
